Module 7 Updates to multiple files

--- a/hobbies.html
+++ b/hobbies.html
@@ -34,9 +34,13 @@
               <figure>
                 <a href="#" target="blank"><img src="images/IMG_9258.JPG" class="pic" alt="pic"></a>
                 <figcaption><a href="#">Baking</a></figcaption>
-                <p>With creativity being on of her best talents, baking really takes the cake! See some of the amazing treats Melissa has made over the years.</p>
+                <p>With creativity being one of her best talents, baking really takes the cake! See some of the amazing treats Melissa has made over the years.</p>
                 </figure>
             </div>
     </section1>
+
+    <footer>
+      <a href="../bioSite/index.html" class="back-link">Back to Landing Page</a>
+    </footer>
 </body>
 </html>
