Final updates to biosite project

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,24 +16,24 @@
         <div class="display">
             <div class="hobbies">
               <figure>
-                <a href="#" target="blank"><img src="images/IMG_2144.JPG" class="pic" alt="pic"></a>
-                <figcaption><a href="#">Crafts</a></figcaption>
+                <a href="crafts.html" target="blank"><img src="images/IMG_2144.JPG" class="pic" alt="pic"></a>
+                <figcaption><a href="crafts.html">Crafts</a></figcaption>
                 <p>From a young age Melissa was into all things crafts. Take a look at some of her amazing creations!</p>
                </figure>
             </div>
           
             <div class="hobbies">
               <figure>
-                <a href="#" target="blank"><img src="images/72134514638__4E03D8BB-6DB1-40BF-BDE1-D4DA73D65187.jpg" class="pic" alt="pic"></a>
-                <figcaption><a href="#">Shelling</a></figcaption>
+                <a href="shelling.html" target="blank"><img src="images/sandDollar.jpg" class="pic" alt="pic"></a>
+                <figcaption><a href="shelling.html">Shelling</a></figcaption>
                 <p>Melissa loves all things outdoor adventures from hiking on the most beautiful trails to nice long beach walks. Take a peek at some of the treasures she has found on her adventures! </p>
                 </figure>
             </div>
           
             <div class="hobbies">
               <figure>
-                <a href="#" target="blank"><img src="images/IMG_9258.JPG" class="pic" alt="pic"></a>
-                <figcaption><a href="#">Baking</a></figcaption>
+                <a href="baking.html" target="blank"><img src="images/IMG_9258.JPG" class="pic" alt="pic"></a>
+                <figcaption><a href="baking.html">Baking</a></figcaption>
                 <p>With creativity being one of her best talents, baking really takes the cake! See some of the amazing treats Melissa has made over the years.</p>
                 </figure>
             </div>
