--- a/index.html
+++ b/index.html
@@ -235,21 +235,21 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
         <div class="col-lg-4">
-            <img src="C:\csd\bioSite\images\IMG_2144.JPG" class="rounded-circle" width="140" height="140" alt="Crafts">
+            <img src="images\IMG_2144.JPG" class="rounded-circle" width="140" height="140" alt="Crafts">
             <h2 class="fw-normal">Crafts</h2>
             <p>Get inspired by some of her greatest crafting projects yet!</p>
             <p><a class="btn btn-secondary" href="crafts.html">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         
         <div class="col-lg-4">
-            <img src="C:\csd\bioSite\images\72134196187__7FA8084A-12EE-466E-B4BF-7E752425D160.jpg" class="rounded-circle" width="140" height="140" alt="Shelling">
+            <img src="images\72134196187__7FA8084A-12EE-466E-B4BF-7E752425D160.jpg" class="rounded-circle" width="140" height="140" alt="Shelling">
             <h2 class="fw-normal">Shelling</h2>
             <p>Look at some of her most amazing finds!</p>
             <p><a class="btn btn-secondary" href="shelling.html">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         
         <div class="col-lg-4">
-            <img src="C:\csd\bioSite\images\IMG_9258.JPG" class="rounded-circle" width="140" height="140" alt="Baking">
+            <img src= "images/IMG_9258.JPG" class="rounded-circle" width="140" height="140" alt="Baking">
             <h2 class="fw-normal">Baking</h2>
             <p>When it comes to baking she takes the cake! Check out some of these sweet treats.</p>
             <p><a class="btn btn-secondary" href="baking.html">View details &raquo;</a></p>
