--- a/shelling.html
+++ b/shelling.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelling</title>
     <link href="shelling.css" type="text/css" rel="stylesheet">
+    
 </head>
 <body>
     <header>
         <h1>Shelling</h1>
-    </header>
 
     <section1>
         <div class="display">
@@ -32,6 +32,7 @@
 
     <footer>
       <a href="../bioSite/index.html" class="back-link">Back to Landing Page</a>
+      <a href="../bioSite/hobbies.html" class="back-link">Back to Hobbies Page</a>
     </footer>
 </body>
 </html>
