--- a/crafts.html
+++ b/crafts.html
@@ -32,6 +32,7 @@
 
     <footer>
       <a href="../bioSite/index.html" class="back-link">Back to Landing Page</a>
+      <a href="../bioSite/hobbies.html" class="back-link">Back to Hobbies Page</a>
     </footer>
 </body>
 </html>
